[gd_scene load_steps=6 format=3 uid="uid://yjf3ktqy6m51"]

[ext_resource type="Script" uid="uid://d3313oiwytfjy" path="res://Player/player.gd" id="1_btcbx"]
[ext_resource type="PackedScene" uid="uid://b60akayl6328p" path="res://Player/wizard.tscn" id="1_onrkg"]
[ext_resource type="PackedScene" uid="uid://5lij70fuxevn" path="res://hud.tscn" id="2_gwnis"]
[ext_resource type="Script" uid="uid://bcvcax0nvtn6e" path="res://Player/camera_controller.gd" id="2_i3pqv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hqtel"]
height = 1.88224

[node name="Player" type="CharacterBody3D" groups=["Player"]]
transform = Transform3D(-1, 0, 1.50996e-07, 0, 1, 0, -1.50996e-07, 0, -1, 0, 0, 0)
script = ExtResource("1_btcbx")

[node name="HUD" parent="." instance=ExtResource("2_gwnis")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.911674, 0, 0, 0, 0.911674, 0, 0, 0, 0.911674, 0, 0.853217, 0)
shape = SubResource("CapsuleShape3D_hqtel")

[node name="MeshRoot" type="Node3D" parent="."]

[node name="Wizard" parent="MeshRoot" instance=ExtResource("1_onrkg")]

[node name="RayCast3D" type="RayCast3D" parent="MeshRoot/Wizard"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.773, -0.495)
target_position = Vector3(0, 0, -1)

[node name="CameraRoot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
script = ExtResource("2_i3pqv")

[node name="CameraYaw" type="Node3D" parent="CameraRoot"]

[node name="CameraPitch" type="Node3D" parent="CameraRoot/CameraYaw"]

[node name="SpringArm3D" type="SpringArm3D" parent="CameraRoot/CameraYaw/CameraPitch"]
spring_length = 2.5

[node name="Camera3D" type="Camera3D" parent="CameraRoot/CameraYaw/CameraPitch/SpringArm3D"]
